<resources>
    <string name="app_name">CoffeeAddict</string>
    <string name="customer_name">Name</string>
    <string name="toppings" translatable="false">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order">Order</string>
</resources>
