<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_dark"
        tools:context="com.example.android.coffeeaddict.MainActivity">

        <EditText
            android:id="@+id/client_name_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/customer_name"
            android:inputType="textAutoComplete"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/whipped_cream"
            android:paddingLeft="20dp"/>
            <!--android:onClick="addTopping"-->

        <CheckBox
            android:id="@+id/chocolate_topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/chocolate"
            android:paddingLeft="20dp"/>


        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="-"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@android:color/holo_red_light"
                android:onClick="decreaseOrder"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="+"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/holo_red_light"
                android:onClick="increaseOrder"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:textColor="@android:color/holo_orange_light"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="16sp"
            android:text=""
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"/>

        <!--*******Trial and error of live population of order summary below this line**********-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="Order Summary"-->
            <!--android:textColor="@android:color/holo_orange_light"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:textStyle="bold"-->
            <!--android:textAllCaps="true" />-->


        <!--<TextView-->
            <!--android:id="@+id/order_summary"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@android:color/holo_orange_light"-->
            <!--android:textSize="16sp"-->
            <!--android:text="0"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginBottom="16dp"/>-->
        <!--********Trail and error of live population of order summary above this line********-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:text="@string/order"
            android:textColor="@android:color/holo_orange_light"
            android:background="@android:color/holo_blue_light"
            android:onClick="submitOrder"/>

    </LinearLayout>
</ScrollView>
